added some links

--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -42,7 +42,7 @@
 
 <body>
 
-	<div id="wrapper">
+	<main id="wrapper">
 		<p class="hide"><small><a href="/" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; links &gt;</small></p>
 
 		<center>
@@ -92,10 +92,15 @@
 		<li><a href="https://www.cloudflare.com/developer-platform/pages/" target="_blank">cloudflare pages</a> - up to 20,000 files of storage. add a custom domain. files have a limit of 25mb each.</li>
 		<li><a href="https://leprd.space/" target="_blank">leprd.space</a> - free hosting for hobbyists websites, supports PHP and MySQL</li>
 
-		<h3 id="code-misc">misc</h3>
+		<h3 id="git">git / github</h3>
 		<li><a href="https://www.git-scm.com/" target="_blank">git</a> - a version control system, The Thing that tracks your coding history and does other neat stuff! highly recommend learning how to use it because it is super handy for coding.<br> some guides/tutorials that have helped me: <a href="https://scarecat.neocities.org/guides/using-git" target="_blank">scarecat's</a>, <a href="https://petrapixel.neocities.org/coding/git-tutorial" target="_blank">petrapixel's</a>. i also use git bash as my main terminal.</li>
-		<li><a href="https://ohmyposh.dev/" target="_blank">oh my posh</a> - customize your terminal of choice</li>
+		<li><a href="https://learngitbranching.js.org/" target="_blank">learn git branching</a></li>
+		<li><a href="https://ohshitgit.com/" target="_blank">ohshitgit</a> - solutions to common git mistakes / problems</li>
 		<li><a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities</a> - update your neocities directly from your PC (without the neocities editor) using <b>github</b> actions. a crazy time saver and i really recommend it to everyone who updates their site a lot! here's a <a href="https://github.com/burned-salmon/deploy-to-neocities-template">tutorial</a> by MissMoss on how to install it.</li>
+		<h3 id="code-misc">misc</h3>
+		<li><a href="https://roadmap.sh/" target="_blank">roadmap.sh</a> - developer roadmaps! they have one for frontend and backend!</li>
+		<li><a href="https://www.electronjs.org/" target="_blank">electron</a> - build desktop apps with html / css / js</li>
+		<li><a href="https://ohmyposh.dev/" target="_blank">oh my posh</a> - customize your terminal of choice, i use currently use this for <a href="git-bash.jpg">mine</a>!</li>
 		<li><a href="https://cohost.org/ChaiaEran/post/2755172-how-to-make-using-ne" target="_blank">how to make neocities a billion times more tolerable</a> - a guide on how to use the neocities CLI, with or without github!</li>
 		<hr>
 
@@ -156,8 +161,8 @@
 
 		<hr>
 
-		<h3 id="sites">useful sites</h3>
-		<li><a href="https://roadmap.sh/" target="_blank">roadmap.sh</a> - developer roadmaps</li>
+		<h3 id="sites">useful sites for webdev</h3>
+		<li><a href="https://wave.webaim.org" target="_blank">web accessibility evaluation tools</a></li>
 		<li><a href="https://ready.mobi" target="_blank">ready.mobi</a> - check how your site looks on mobile</li>
 		<li><a href="https://codebeautify.org/htmlviewer" target="_blank">codebeautify.org</a> - makes your code pretty. you can also minimize your code as well</li>
 		<li><a href="https://nekocalc.com/px-to-rem-converter" target="_blank">px-to-rem</a> converter</li>
@@ -264,6 +269,7 @@
 
 		<h3 id="img-F2U">sites with F2U materials</h3>
 
+		<li><a href="https://phosphoricons.com/?size=16" target="_blank">phosphoricons</a> - icons</li>
 		<li><a href="https://www.flickr.com/photos/kawaiiscans/albums" target="_blank">kawaiiscans</a> - scans of cute notepads</li>
 		<li><a href="https://foollovers.com/" target="_blank">foollovers.com</a> - site with pixels, bgs, dividers, templates, etc</li>
 		<li><a href="https://mothcub.neocities.org/pixels" target="_blank">mothclub</a>'s pixels!</li>
@@ -342,7 +348,7 @@
 		<li><a href="https://saerasoft.com/caesium" target="_blank">caesium image compressor</a> - online img compressor but it also offers an offline software you can download!</li>
 		<li><a href="https://www.piskelapp.com/" target="_blank">pixel art editor</a> - online / offline</li>
 		<li><a href="https://libresprite.github.io/#!/" target="_blank">libresprite</a> - a free and open source fork of <i>aseprite</i></li>
-		<li><a href="https://fansfansfans.net/codegenerator/" target="_blank">fanlisting banner generator</a></li>
+		<li><a href="https://fansfansfans.net/codegenerator/" target="_blank">fanlisting button generator</a></li>
 
 		<hr>
 
@@ -403,7 +409,11 @@
 		<li><a href="https://3ds.hacks.guide" target="_blank">3ds.hacks.guide</a> / <a href="https://wiki.hacks.guide/wiki/3DS:Things_to_do" target="_blank">things to do</a> / <a href="https://wiki.ds-homebrew.com/ds-index/forwarders?tab=3ds-sd-card" target="_blank">DS game forwarder</a></li>
 		<li><a href="https://wiiu.hacks.guide/#/" target="_blank">wiiu.hacks.guide</a> / <a href="https://wiki.agilly1989.xyz/books/wiiu" target="_blank">another guide</a> / <a href="https://wii.hacks.guide/vwii-homebrew-channel" target="_blank">vwii modding</a></li>
 
-		<h3 id="articles">articles</h3>
+		<h3>reading</h3>
+		<ul>
+			<li><a href="https://gist.github.com/cemerson/043d3b455317d762bb1378aeac3679f3" target="_blank">Archive.org Scanned Book Downloader Bookmarklet</a></li>
+		</ul>
+		<h4 id="articles">articles</h4>
 		<p>articles / blog posts i think are worth reading. might need <a href="https://12ft.io/" target="_blank">12ft.io</a> for some of these.</p>
 		<li><a href="https://yesterweb.org/no-to-web3/" target="_blank">say no to web3</a></li>
 		<li><a href="https://www.cs.cmu.edu/~sef/sefSmiley.htm" target="_blank">smiley :) lore</a></li>
@@ -450,7 +460,7 @@
 		<li><a href="https://cliqued.wings.nu/" target="_blank">cliqued!</a> - collection of text cliques</li>
 		<li><a href="https://webgardens.neocities.org" target="_blank">webgardens</a></li>
 
-	</div>
+	</main>
 </body>
 
 </html>
