--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -52,7 +52,7 @@
 			<a title="meowcatsrule - cats rule indeed!!! cool photo journal" href="https://meowcatsrule.neocities.org" target="_blank"><img src="!g/meowcatsrule.gif"></a>
 			<a title="jj - very lovely! i love reading about their projects! so charming" href="https://cygnet.neocities.org" target="_blank"><img src="!g/cygnet.png"></a>
 			<a href="https://strawberry-gashes.neocities.org" title="erin - cute pastel site, has a ton of cute resources, and another inspiration for my site!" target="_blank"><img src="!g/strawberry-gashes.gif"></a>
-			<a title="philia" href="https://philia995.neocities.org" target="_blank"><img src="!g/philia995.gif"></a>
+			<a title="philia" href="https://philia995.neocities.org" target="_blank"><img src="!g/philia995.png"></a>
 			<a title="fae - FAE!!! fae's website is so fucking cool to me i love this site a whole ton!!!! i love the intricate designs that all of their pages have. im just in awe every time i give em a visit! album shelf + dreams pages are some of my favs. oh did i mention that their art is really cool too? YUP!" href="https://faegardens333.neocities.org" target="_blank"><img src="!g/faegardens333.gif"></a>
 			<a title="princess - very cool site! always has a neat layout" href="https://princss.online" target="_blank"><img src="https://princss.online/media/images/buttons/princss_button.png"></a>
 			<a title="harley - very simple but cute blog!" href="https://cherrycloudchiffon.neocities.org" target="_blank"><img src="!g/cherrycloudchiffon.png"></a>
