--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -196,7 +196,7 @@
 					<a href="/notebook/archive/pages/index.html" target="_parent">archived pages</a>
 				</ul>
 			</ul>
-			<li><b>misc pages</b></li>
+			<li><b>misc / archived pages</b></li>
 			<ul>
 				<li><a href="/safe-spot/index.html" target="_parent">safe spot</a></li>
 				<li><a href="/webgarden/greenhouse.html" target="_parent">webgarden greenhouse</a></li>
