--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -152,9 +152,9 @@ finished on 02.mar.25 -->
 					</p>
 					<!-- <p><span class="title">playing: </span> </p> -->
 					<p><span class="title">watching: </span> my cat from hell</p>
-					<!-- <p><span class="title">reading: </span> </p> -->
-					<p><span class="title">working on: </span> studying, cleaning up code here and there, recovering my voice</p>
-					<p class="date">last updated: 03.apr.25</p>
+					<p><span class="title">reading: </span> my calculus and C++ class text books bro</p>
+					<p><span class="title">working on: </span> cleaning up code here and there, making minor improvements</p>
+					<p class="date">last updated: 11.apr.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
