added and organized some links

--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -27,14 +27,14 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 	<div id="wrapper-index">
 
 		<div class="tab">
-			<button class="tablinks link-b" onclick="openTab('link-wrapper')">links</button>
+			<button id="defaultOpen" class="tablinks link-b" onclick="openTab('link-wrapper')">links</button>
 			<button class="tablinks site-b" onclick="openTab('site-wrapper')">sitely</button>
 			<button class="tablinks archive-b" onclick="openTab('archive-wrapper')">archives</button>
 			<button class="tablinks F2U-b" onclick="openTab('F2U-wrapper')">F2U</button>
 		</div>
 
 		<div class="tab2">
-			<button id="defaultOpen" class="tablinks info-b" onclick="openTab('info-wrapper')">info &amp; creds</button>
+			<button class="tablinks info-b" onclick="openTab('info-wrapper')">info &amp; creds</button>
 			<button class="tablinks tut-b" onclick="openTab('tut-wrapper')">tutorials</button>
 		</div>
 
@@ -51,15 +51,16 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 						<br>
 						<ul><small>↳ <a href="links#resource-pages" target="iframe_a">more resource pages</a></small></ul>
 						<br>
-						↳ <a href="links#code" target="iframe_a">coding</a>
+						↳ <a href="links#code" target="iframe_a">coding &amp; webdev</a>
 						<ul><small>
-								<a href="links#editor" target="iframe_a">editors</a>,
+								<a href="links#editor" target="iframe_a">code editors</a>,
 								<a href="links#hosting" target="iframe_a">hosting</a>,
+								<a href="links#git" target="iframe_a">git / github</a>,
 								<a href="links#code-misc" target="iframe_a">misc</a>,
 							</small></ul>
-						↳ <a href="links#coding-help" target="iframe_a">HTML, CSS, and JS help</a>
+						↳ <a href="links#coding-help" target="iframe_a">HTML, CSS, and JS</a>
 						<ul>
-							<small><a href="links#beginner" target="iframe_a">the basics (HTML and CSS focused)</a>, <a href="links#js" target="iframe_a">javascript</a>, <a href="links#css" target="iframe_a">css</a>, <a href="links#html" target="iframe_a">html</a>, <a href="links#layouts" target="iframe_a">html F2U templates</a>, <a href="links#sites" target="iframe_a">useful sites</a>,
+							<small><a href="links#beginner" target="iframe_a">the basics (HTML and CSS focused)</a>, <a href="links#js" target="iframe_a">javascript</a>, <a href="links#css" target="iframe_a">css</a>, <a href="links#html" target="iframe_a">html</a>, <a href="links#layouts" target="iframe_a">html F2U templates</a>, <a href="links#sites" target="iframe_a">useful sites for webdev</a>,
 								<a href="links#tut" target="iframe_a">tutorials / guides</a>,
 								<a href="links#cool" target="iframe_a">cool stuff 4 your site</a>: <a href="links#guestbooks">guestbooks</a>, <a href="links#tools" target="iframe_a">tools</a>, <a href="links#calendar" target="iframe_a">calendars / clocks</a>, <a href="links#music" target="iframe_a">music</a>, <a href="links#rss" target="iframe_a">rss</a>,
 								<a href="links#help-misc" target="iframe_a">misc</a>, <a href="links#neat" target="iframe_a">neat pieces of code</a></small>
