--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -51,8 +51,6 @@
 
 		<h2 id="favs">personal favs</h2>
 		<li><a href="https://htmlcheatsheet.com" target="_blank">HTML cheat sheet</a> - SUPER useful and they also have cheatsheets for css and js!</li>
-		<li><a href="https://learntheweb.courses/topics/html-semantics-cheat-sheet/" target="_blank">HTML semantics</a></li>
-		<li><a href="https://www.w3schools.com/cssref/css_selectors.php" target="_blank">CSS selectors</a></li>
 		<li><a href="http://www.catipsum.com/index.php" target="_blank">catipsum</a> - lorem ipsum but cats</li>
 		<li><a href="https://generator.lorem-ipsum.info/" target="_blank">generator.lorem-ipsum</a> - lorem ipsum in other scripts! mostly use it for japanese and korean</li>
 		<li><a href="https://catbox.moe" target="_blank">catbox.moe</a> - file sharing site</li>
@@ -104,7 +102,7 @@
 		<li><a href="https://cohost.org/ChaiaEran/post/2755172-how-to-make-using-ne" target="_blank">how to make neocities a billion times more tolerable</a> - a guide on how to use the neocities CLI, with or without github!</li>
 		<hr>
 
-		<h2 id="coding-help">HTML, CSS, JS help</h2>
+		<h2 id="coding-help">HTML, CSS, JS</h2>
 		<p>in my personal experience, i actually learned the basics of HTML and CSS through using and experimenting with <a href="#layouts">templates!</a> but these sites are of huge help as well.</p>
 
 		<h3 id="beginner">beginner stuff (HTML and CSS focused)</h3>
@@ -126,6 +124,7 @@
 		<li><a href="https://javascript-compressor.com/" target="_blank">JS compressor</a> - compresses file sizes!</li>
 
 		<h3 id="css">CSS</h3>
+		<li><a href="https://www.w3schools.com/cssref/index.php" target="_blank">w3schools CSS reference</a></li>
 		<li><a href="https://css-pattern.com/graph-paper/" target="_blank">CSS patterns</a></li>
 		<li><a href="https://animated-gradient-background-generator.netlify.app/" target="_blank">animated gradient bg generator</a></li>
 		<li><a href="https://owumaro.github.io/text-stroke-generator/" target="_blank">text stroke generator</a></li>
@@ -141,6 +140,7 @@
 		<li><a href="https://cssgridgarden.com" target="_blank">cssgridgarden</a> - learn about css grids</li>
 
 		<h3 id="html">HTML</h3>
+		<li><a href="https://learntheweb.courses/topics/html-semantics-cheat-sheet/" target="_blank">HTML semantics</a></li>
 		<li><a href="https://www.html.am/html-editors/html-text-editor.cfm" target="_blank">www.html.am</a> - html text editor</li>
 		<li><a href="https://validator.w3.org/nu/" target="_blank">HTML validator</a></li>
 		<li><a href="https://www.htmlsymbols.xyz" target="_blank">HTML symbol codes and entities</a></li>
