--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -150,11 +150,11 @@ finished on 02.mar.25 -->
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<!-- <p><span class="title">playing: </span> </p> -->
-					<p><span class="title">watching: </span> my cat from hell</p>
+					<p><span class="title">playing: </span> minecraft</p>
+					<!-- <p><span class="title">watching: </span> </p> -->
 					<p><span class="title">reading: </span> my calculus and C++ class text books bro</p>
-					<p><span class="title">working on: </span> cleaning up code here and there, making minor improvements</p>
-					<p class="date">last updated: 11.apr.25</p>
+					<p><span class="title">working on: </span> making minor improvements</p>
+					<p class="date">last updated: 20.apr.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
