--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -51,7 +51,9 @@
 			<section id="y2025">
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
-
+				<article>
+					<p><b>19.apr.25 - 5pm</b> been feeling a bit down as of late.... i wish my feelings weren't so complicated. blehhh.</p>
+				</article>
 				<article>
 					<p><b>03.apr.25 - 4pm</b> in my (soon to be!) 2 years of having <i>doqmeat.com</i> i've had a couple of... questionable messages pop up on my chatbox and guestbook. i always delete them whenever i see them. <b>on <u>my</u> site</b> i do not let messages like that (mean for the sake of being mean) about me or my site roam around. though today i got one from someone saying something along the lines of <q>stop doing this, this is a waste of time</q>. it got me thinking how this place that i have built from the grown up is literally anything but a waste of my time. i've gotten to experience so many new things because of my interest in building this. i will always cherish my site. thank you for reminding me of that! oh, they also called me a nerd which i found really funny. does anyone get offended these days from being called a nerd? i should have let that message up, that was really good.</p>
 				</article>
