minor changes to scrapbook and tv log

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -48,7 +48,6 @@
 					<img src="!g/madoka-rebellion/rebellion2.jpg" alt="screenshots from madoka magica rebellion" width="100%">
 					<img src="!g/madoka-rebellion/rebellion3.jpg" alt="screenshots from madoka magica rebellion" width="100%">
 					<img src="!g/madoka-rebellion/rebellion4.jpg" alt="screenshots from madoka magica rebellion" width="100%">
-					<p class="status">finished</p>
 				</div>
 			</div>
 
@@ -61,7 +60,6 @@
 					<p>i was very sad when i got the news that the show got cancelled. though i do have to say that the ending of season 3 was wonderfully done. i rewatched it recently with my girlfriend and i couldn't help but sob when we finished watching it. now that my grandma passed away, i appreciate this show more than when i first watched it. i love this show dearly. and i will always look up to it. this is a wonderful piece of media.</p>
 					<img src="!g/joesitting.png" width="90%" alt="a screenshot from joe pera talks with you. its a shot of a snowy forest and in the center we see joe sitting, the camera is behind him.">
 					<blockquote>my nana and her quiet home were that to me, a place of undeniable good in the world. <br> and now that they're gone- <br> well, i actually still have to take care of the house. <br> i don't know if i'll ever be able to find that again <br> or if i'll ever feel alright again <br> i don't know. <br> <b>what do i know?</b></blockquote>
-					<p class="status">finished</p>
 				</div>
 			</div>
 
@@ -79,7 +77,6 @@
 					<hr>
 					<p>that ending??? alright then... i hope to watch season 3 at some point but i'm not sure where to watch it that wouldn't cost me money LMAO</p>
 					<p><a href="https://www.filmaffinity.com/us/movieimage.php?imageId=892912807" target="_blank">poster credit</a></p>
-					<p class="status">finished</p>
 				</div>
 			</div>
 
@@ -96,7 +93,6 @@
 					<p>i love the concept of being able to store memories in a chip and as long as you can get another body then you are basically immortal. but of course, there is way more than in the plot of this anime. also the art style is just so charming and cute given how dark this show gets.</p>
 					<p>there's some parts that are a bit weird tbh that have made go ermm but overall this was an absolute treat to watch and experience. i will never forget it. i also own the bluray so i literally rewatch it every 3 months.</p>
 					<p>watching this was what made me interesting in watching <a href="/masaaki-yuasa/index.html">masaaki yuasa</a>'s other work! it has also been my favorite out of all of them.</p>
-					<p class="status">finished</p>
 				</div>
 			</div>
 
@@ -106,7 +102,6 @@
 					<h2 id="meshi">dungeon meshi</h2>
 					<p>so cute and fun.</p>
 					<p>had to watch the last few eps in the eng dub bc my mom wanted to understand what they were saying as she was knitting LOL</p>
-					<p class="status">finished</p>
 				</div>
 			</div>
 
@@ -116,7 +111,6 @@
 					<h2 id="utena">revolutionary girl utena</h2>
 					<p>i binged watched this when i got covid but then i got better and forgot about it... SOON i will finish you. found the story very intriguing.</p>
 					<p>edit: wow. i get it now.</p>
-					<p class="status">finished</p>
 				</div>
 			</div>
 
@@ -128,7 +122,6 @@
 					<p>despite the show being mostly like a comedy of the lives of these people, i really do like some of the theme this show tackles and how it explores them. i was often feeling really heavy for these characters, specially orel. i grew up in a Very christian enviroment so some of the things discussed in this <b>really</b> got to me in a way. i get it.</p>
 					<p>which was the reason why my heart was so heavy when i finished watching it. orel i love you so much.</p>
 					<p>need to watch the special that released a few years ago.</p>
-					<p class="status">finished</p>
 				</div>
 			</div>
 
@@ -141,6 +134,7 @@
 			<details>
 				<summary>finished</summary>
 				<ul>
+					<li>severance</li>
 					<li>twin peaks: the return</li>
 					<li>twin peaks</li>
 					<li>orange is the new black</li>
@@ -178,6 +172,7 @@
 				<ul>
 					<li>shows that <a title="my masaaki yuasa watchlist" href="/masaaki-yuasa/index.html">masaaki yuasa</a> has been involved with!</li>
 					<li>sonny boy</li>
+					<li>the rose of versailles</li>
 					<li>the haunting of bly manor</li>
 					<li>serial experiments lain</li>
 				</ul>
@@ -186,7 +181,7 @@
 	</main>
 
 	<footer>
-		<p><b>last updated: 18.feb.24</b></p>
+		<p><b>last updated: 20.apr.25</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
