new journal log

--- a/doqmeat/journal/archive.html
+++ b/doqmeat/journal/archive.html
@@ -22,11 +22,14 @@ coded with love by des
 <body>
   <main>
     <header class="hide">
-      <small><a href="../index.html" target="_parent">out of frame? click here!</a></small>
+      <small><a href="index.html" target="_parent">out of frame? click here!</a></small>
     </header>
-    <li>08.mar.25 - <a href="2025/03.html#8">i need to let go of spotify</a></li>
+    <h2>log archive</h2>
+    <li class="cats">20.apr.25 - <a href="2025/04.html#20">walking steve minecraft outside</a></li>
+    <li class="life coding">11.apr.25 - <a href="2025/04.html#11">this is like the equivalent of someone not talking for a week and then talking for 5 hours straight.</a></li>
+    <li class="music">08.mar.25 - <a href="2025/03.html#8">i need to let go of spotify</a></li>
     <li>01.mar.25 - <a href="2025/03.html#1">a lot happening</a></li>
-    <li>23.jan.25 - <a href="2025/01.html#23">2nd year of uni</a></li>
+    <li class="uni">23.jan.25 - <a href="2025/01.html#23">2nd year of uni</a></li>
     <li>20.jan.25 - <a href="2025/01.html#20">winter break wrap-up</a></li>
     <li>01.jan.25 - <a href="2025/01.html#1">i am tired, but also a bit joyful</a></li>
     <li>17.dec.24 - <a href="2024/12.html#17">1st year of uni done!</a></li>
