--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -52,6 +52,22 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>17.may.25 - 6pm</b> will be done with this uni semester pretty soon! here's my list of fun things to do this summer:
+					<ul>
+						<li>build a <a title="github repository" href="https://github.com/doqmeat/js-walkman-mp3-player" target="_blank" class="outlink">JS walkman music player</a></li>
+						<li>go for walks weekly</li>
+						<li>finish <a href="/vgs/games/fallout-new-vegas/">new vegas</a> and it's DLCs</li>
+						<li>be brave and get into <a href="/vgs/games/bloodborne/">bloodborne</a> again!!! <small>bc i bought a ps5 recently ^-^</small></li>
+						<li>finish <a href="https://roadmap.sh/frontend" target="_blank" class="outlink">frontend</a> roadmap <small>and i have learned so many cool new stuff because of this btw. so helpful!</small></li>
+					</ul>
+					there's more but that's all i wanna share here :3
+					</p>
+				</article>
+				<article>
+					<p><b>17.may.25 - 5pm</b> some stupid ass saw an ebay listing of a madoka magica bluray for only $45 and it had two discs so he thought the 2 discs were the 2 FIRST MOVIES which are basically the entire anime portion but no actually! the first 2 discs are episodes 1 - 8 !! I AM MISSING EPISODES 9 - 12 WHICH ARE ON ANOTHER DISC! I AM THE STUPID ASS!</p>
+					<p>i will still keep it though because again... its kind of crazy to find the anime on bluray at an okay price. i will just keep an eye our for listings of the other disc... idk why the bluray of madoka is so pricy, it's not even out of stock or a limited edition or anything so like why do i have to pay $120 for it. but this is honestly something i've been meaning to get on bluray so im happy that i have AT LEAST the first 8 episodes here. <button onclick="showPic('!g/250517-madoka-bluray.png','front cover of the madoka magica bluray','the cover is so pretty though, i will scan it eventually. kinda want it as my background.')">madoka-bluray.png</button></p>
+				</article>
+				<article>
 					<p><b>19.apr.25 - 5pm</b> been feeling a bit down as of late.... i wish my feelings weren't so complicated. blehhh.</p>
 				</article>
 				<article>
