--- a/doqmeat/vgs/games/bloodborne/index.html
+++ b/doqmeat/vgs/games/bloodborne/index.html
@@ -70,8 +70,8 @@
 
 		<h4>reference links</h4>
 		<li><a href="https://www.bloodborne-wiki.com" target="_blank">bloodborne-wiki</a></li>
-		<li><s><a href="https://docs.playstation.com/reader/#/documents/bloodborne-official-digital-guide-ps4?chapter=1&page=1" target="_blank">stragedy guide (playstation docs)</a></s> i don't know what happened but i can't access it through this link anymore :( <a href="https://archive.org/details/bloodborne-collectors-edition-guide/mode/2up">archive.org copy</a></li>
-		<li><a href="https://archive.org/details/artbook-Bloodborne_Official_Artworks/mode/2up" target="_blank">official artbook (archive.org pdf)</a></li>
+		<li><s><a title="playstation docs" href="https://docs.playstation.com/reader/#/documents/bloodborne-official-digital-guide-ps4?chapter=1&page=1" target="_blank">stragedy guide</a></s> i don't know what happened but i can't access it through this link anymore :( <a href="https://archive.org/details/bloodborne-collectors-edition-guide/mode/2up" target="_blank">archived copy</a></li>
+		<li><a title="archive.org pdf" href="https://archive.org/details/artbook-Bloodborne_Official_Artworks/mode/2up" target="_blank">official artbook</a></li>
 
 
 		<h4>screenshots</h4>
