--- a/doqmeat/vgs/games/bloodborne/index.html
+++ b/doqmeat/vgs/games/bloodborne/index.html
@@ -23,6 +23,11 @@
 		<div class="info"><b>release date: </b> mar 24, 2015</div>
 		<div class="info"><b>developer: </b> from software</div>
 		<div class="info"><b>genre/type: </b> action adventure, rpg, horror</div>
+		<div class="info"><b>links: </b>
+			<a href="https://www.bloodborne-wiki.com" target="_blank">wiki</a>,
+			<a href="https://archive.org/details/bloodborne-collectors-edition-guide/mode/2up" target="_blank">strategy guide</a>,
+			<a title="archive.org pdf" href="https://archive.org/details/artbook-Bloodborne_Official_Artworks/mode/2up" target="_blank">artbook</a>
+		</div>
 		<br>
 
 		<h3>logs</h3>
@@ -66,12 +71,6 @@
 		<hr>
 
 		<p><span class="date">05.jan.25</span> the wired controller did not work. but you know what, eventually i will sent out my PS4 to get the wifi chip replaced. i wont give up!!!! i am hopeful for my 9 year old PS4! i am poor! and i want to keep playing bloodborne JLDFKJSDFJ</p>
-
-
-		<h4>reference links</h4>
-		<li><a href="https://www.bloodborne-wiki.com" target="_blank">bloodborne-wiki</a></li>
-		<li><s><a title="playstation docs" href="https://docs.playstation.com/reader/#/documents/bloodborne-official-digital-guide-ps4?chapter=1&page=1" target="_blank">stragedy guide</a></s> i don't know what happened but i can't access it through this link anymore :( <a href="https://archive.org/details/bloodborne-collectors-edition-guide/mode/2up" target="_blank">archived copy</a></li>
-		<li><a title="archive.org pdf" href="https://archive.org/details/artbook-Bloodborne_Official_Artworks/mode/2up" target="_blank">official artbook</a></li>
 
 
 		<h4>screenshots</h4>
