--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -54,6 +54,7 @@
 		<h2>changelog</h2>
 
 		<div id="log">
+			<li>22.may.25: log: <a href="games/bloodborne/index.html">bloodborne</a> + added <a href="hardware/index.html#PS5">PS5</a> to hardware</li>
 			<li>01.feb.25: new: <a href="games/balatro/index.html">balatro</a></li>
 			<li>17.jan.25: log: <a href="games/fallout-new-vegas/index.html">fallout new vegas</a></li>
 			<li>07.jan.25: log: <a href="games/kirby-planet-robobot/index.html">kirby planet robobot</a> + <a href="games/style-savvy-styling-star/index.html">style savvy styling star</a></li>
