--- a/doqmeat/music/cds/index.html
+++ b/doqmeat/music/cds/index.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<title>CDs</title>
 	<link rel="icon" type="image/x-icon" href="/!g/pix/cd.gif">
-	<link href="cds.css" rel="stylesheet" type="text/css" media="all">
+	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
@@ -34,36 +34,36 @@
 		<!-- 			column 1 -->
 		<div class="column">
 
-			<div class="cd"><img src="!g/cds/yeule-serotonin-cover.jpg" alt="cover for serotonin II by yeule">
+			<div class="cd"><img src="pics/yeule-serotonin-cover.jpg" alt="cover for serotonin II by yeule">
 				<div class="hov">
 					<div class="caption">
 						<h3>serotonin II - yeule</h3>
 						<p><span class="fav"></span></p>
 						<p>managed to get this super cheap on ebay lets fucking GOOOOOOOOOOOO</p>
-						<a class="i" href="!g/cds/yeule-serotonin-page1.jpg" target="_blank"><img src="!g/cds/yeule-serotonin-page1.jpg" alt="album booklet page of yeule's serotonin II"></a>
-						<a class="i" href="!g/cds/yeule-serotonin-page2.jpg" target="_blank"><img src="!g/cds/yeule-serotonin-page2.jpg" alt="album booklet page of yeule's serotonin II"></a>
+						<a class="i" href="pics/yeule-serotonin-page1.jpg" target="_blank"><img src="pics/yeule-serotonin-page1.jpg" alt="album booklet page of yeule's serotonin II"></a>
+						<a class="i" href="pics/yeule-serotonin-page2.jpg" target="_blank"><img src="pics/yeule-serotonin-page2.jpg" alt="album booklet page of yeule's serotonin II"></a>
 						<p>love this album so much it's so pretty!!!</p>
 						<p><span class="date"> 18.nov.23</span></p>
 					</div>
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/trpp-trpp.jpg">
+			<div class="cd"><img src="pics/trpp-trpp.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>TRPP - TRPP</h3>
 						<p><span class="fav"></span></p>
 						<p>one of my fav dreampop / shoegaze albums &lt;3</p>
 						<p>and also the most expensive one on this collection (as of writing this) from the shipping alone <img src="/!g/pix/catscared.gif"></p>
-						<a class="i" href="!g/cds/trpp-cd.png" target="_blank"><img src="!g/cds/trpp-cd.png"></a>
-						<a class="i" href="!g/cds/trpp-trpp-booklet.jpg" target="_blank"><img src="!g/cds/trpp-trpp-booklet.jpg"></a>
-						<a class="i" href="!g/cds/trpp-trpp-back.jpg" target="_blank"><img src="!g/cds/trpp-trpp-back.jpg"></a>
+						<a class="i" href="pics/trpp-cd.png" target="_blank"><img src="pics/trpp-cd.png"></a>
+						<a class="i" href="pics/trpp-trpp-booklet.jpg" target="_blank"><img src="pics/trpp-trpp-booklet.jpg"></a>
+						<a class="i" href="pics/trpp-trpp-back.jpg" target="_blank"><img src="pics/trpp-trpp-back.jpg"></a>
 						<p><span class="date"> 28.apr.22</span></p>
 					</div>
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/oohyo-silence.jpg">
+			<div class="cd"><img src="pics/oohyo-silence.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>silence - oohyo</h3>
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/declanmckenna-wdytatc.jpg">
+			<div class="cd"><img src="pics/declanmckenna-wdytatc.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>what do you think about the car? - declan mckenna</h3>
@@ -82,18 +82,18 @@
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/oohyo-madding.jpg">
+			<div class="cd"><img src="pics/oohyo-madding.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>성난 도시로부터 멀리 (far from the madding city) - oohyo</h3>
 						<p><span class="fav"></span></p>
-						<a class="i" href="/music/!g/cds/oohyo-madding-booklet.jpg" target="_blank"><img src="/music/!g/cds/oohyo-madding-booklet.jpg" style="width:100%"></a>
+						<a class="i" href="pics/oohyo-madding-booklet.jpg" target="_blank"><img src="pics/oohyo-madding-booklet.jpg" style="width:100%"></a>
 						<p><span class="date"> 26.dec.20</span></p>
 					</div>
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/beachhouse-cherry.jpg">
+			<div class="cd"><img src="pics/beachhouse-cherry.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>depression cherry - beach house</h3>
@@ -104,22 +104,22 @@
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/yukika-soullady.jpg">
+			<div class="cd"><img src="pics/yukika-soullady.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>서울여자 (soul lady) - yukika </h3>
 						<p><span class="fav"></span></p>
 						<p>one of the best albums ever made. extremely in love with its design.</p>
-						<a class="i" href="!g/cds/yukika-soullady-tracks.jpg" target="_blank"><img src="!g/cds/yukika-soullady-tracks.jpg"></a>
-						<a class="i" href="!g/cds/yukika-soullady-pitapet2.jpg" target="_blank"><img src="!g/cds/yukika-soullady-pitapet2.jpg"></a>
-						<a class="i" href="!g/cds/yukika-soullady-bunnylamp.jpg" target="_blank"><img src="!g/cds/yukika-soullady-bunnylamp.jpg"></a>
-						<a class="i" href="!g/cds/yukika-soullady-passport.jpg" target="_blank"><img src="!g/cds/yukika-soullady-passport.jpg"></a>
+						<a class="i" href="pics/yukika-soullady-tracks.jpg" target="_blank"><img src="pics/yukika-soullady-tracks.jpg"></a>
+						<a class="i" href="pics/yukika-soullady-pitapet2.jpg" target="_blank"><img src="pics/yukika-soullady-pitapet2.jpg"></a>
+						<a class="i" href="pics/yukika-soullady-bunnylamp.jpg" target="_blank"><img src="pics/yukika-soullady-bunnylamp.jpg"></a>
+						<a class="i" href="pics/yukika-soullady-passport.jpg" target="_blank"><img src="pics/yukika-soullady-passport.jpg"></a>
 						<p><span class="date"></span> 19.nov.20</p>
 					</div>
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/loona-1200.jpg">
+			<div class="cd"><img src="pics/loona-1200.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>12:00 - loona</h3>
@@ -135,17 +135,17 @@
 		<div class="column">
 
 
-			<div class="cd"><img src="!g/cds/setsunapop%20(1).jpg" alt="cover for alterour setsuna pop">
+			<div class="cd"><img src="pics/setsunapop%20(1).jpg" alt="cover for alterour setsuna pop">
 				<div class="hov">
 					<div class="caption">
 						<h3>アルターワー・セツナポップ / alterour setsuna pop - siinamota</h3>
 						<p>got this for meee as a treat for my birthday!</p>
-						<a class="i" href="!g/cds/setsunapop%20(3).jpg" target="_blank"><img src="!g/cds/setsunapop%20(3).jpg"></a>
+						<a class="i" href="pics/setsunapop%20(3).jpg" target="_blank"><img src="pics/setsunapop%20(3).jpg"></a>
 						<p>when you take out the CD a small siinamota is revealed in the background...</p>
-						<a class="i" href="!g/cds/setsunapop%20(4).jpg" target="_blank"><img src="!g/cds/setsunapop%20(4).jpg"></a>
-						<a class="i" href="!g/cds/setsunapop%20(5).jpg" target="_blank"><img src="!g/cds/setsunapop%20(5).jpg"></a>
+						<a class="i" href="pics/setsunapop%20(4).jpg" target="_blank"><img src="pics/setsunapop%20(4).jpg"></a>
+						<a class="i" href="pics/setsunapop%20(5).jpg" target="_blank"><img src="pics/setsunapop%20(5).jpg"></a>
 						<p>because of this purchase i noticed that the different illustrations in here (drawn by <a href="https://www.pixiv.net/en/users/5105537" target="_blank">meisa</a>) all form 1 picture when put together.</p>
-						<a class="i" href="!g/cds/setsuna-pop-meisa.jpg" target="_blank"><img src="!g/cds/setsuna-pop-meisa.jpg"></a>
+						<a class="i" href="pics/setsuna-pop-meisa.jpg" target="_blank"><img src="pics/setsuna-pop-meisa.jpg"></a>
 						<p>i had seen pictures of the <a title="archive.org" href="https://archive.org/details/setsuna-pop-limited-ed" target="_blank" class="outlink">scans</a> of this album before and yet i never noticed this. pretty neat!</p>
 						<p><span class="ver"> regular</span></p>
 						<p><span class="date"> 27.may.24</span></p>
@@ -167,7 +167,7 @@
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/siinamota-yumenomanimani.jpg">
+			<div class="cd"><img src="pics/siinamota-yumenomanimani.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>夢のまにまに (yume no manimani) - siinamota</h3>
@@ -180,19 +180,19 @@
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/beachhouse-teendream.jpg">
+			<div class="cd"><img src="pics/beachhouse-teendream.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>teen dream - beach house</h3>
 						<p>so melancholic and lovely...</p>
-						<a class="i" href="/music/!g/cds/beachhouse-teendream-inside.jpg" target="_blank"><img src="/music/!g/cds/beachhouse-teendream-inside.jpg"></a>
+						<a class="i" href="pics/beachhouse-teendream-inside.jpg" target="_blank"><img src="pics/beachhouse-teendream-inside.jpg"></a>
 						<p><span class="ver"> cd + dvd</span></p>
 						<p><span class="date"> 13.oct.21</span></p>
 					</div>
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/yukika-timeabout.jpg">
+			<div class="cd"><img src="pics/yukika-timeabout.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>timeabout, - yukika</h3>
@@ -203,7 +203,7 @@
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/ateez-treasure-ep3.jpg">
+			<div class="cd"><img src="pics/ateez-treasure-ep3.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3> treasure ep. 3 one to all - ateez</h3>
@@ -214,16 +214,16 @@
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/enhypen-border-carnival-book.jpg">
+			<div class="cd"><img src="pics/enhypen-border-carnival-book.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>border : carnival - enhypen</h3>
 						<p>the intro and the title track of this album are SO so so phenomenal. the rest is ok :)</p>
 						<p>there's a guy on top a bunch of french fries in a pic for the photobook.</p>
-						<a class="i" href="/music/!g/cds/enhypen-border-carnival-book-page2.jpg" target="_blank"><img src="/music/!g/cds/enhypen-border-carnival-book-page2.jpg"></a>
+						<a class="i" href="pics/enhypen-border-carnival-book-page2.jpg" target="_blank"><img src="pics/enhypen-border-carnival-book-page2.jpg"></a>
 						<p>i wonder how many bags of french fries this took.</p>
 						<p>here's how the actual packaging looks</p>
-						<a class="i" href="!g/cds/enhypen-border-carnival.jpg" target="_blank"><img src="!g/cds/enhypen-border-carnival.jpg"></a>
+						<a class="i" href="pics/enhypen-border-carnival.jpg" target="_blank"><img src="pics/enhypen-border-carnival.jpg"></a>
 						<p><span class="ver"> hype</span></p>
 						<p><span class="date"> 26.jun.21</span></p>
 					</div>
@@ -233,47 +233,47 @@
 		</div>
 		<!-- 			column 3 -->
 		<div class="column">
-			<div class="cd"><img src="!g/cds/kokegane.jpg">
+			<div class="cd"><img src="pics/kokegane.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>コケガネのうた / kokegane no uta - siinamota</h3>
 						<p><span class="fav"></span></p>
 						<p>the 2nd birthday gift i got for myself :3 the first was the alterour setsuna pop CD!</p>
 						<p>i've seen ppl reselling this album for more than $100 usd so i am SO happy i was able to get it through cdjapan for less than that!! i love this EP from siinamota so much.</p>
-						<a class="i" href="!g/cds/kokegane-back.jpg" target="_blank"><img src="!g/cds/kokegane-back.jpg"></a>
+						<a class="i" href="pics/kokegane-back.jpg" target="_blank"><img src="pics/kokegane-back.jpg"></a>
 						<p>also this album has such an amazing art featured in it's jewel case and booklet... since then i've been following the artist, <a href="https://twitter.com/tocomomomo" target="_blank" class="outlink">momoc</a>, on social media.</p>
-						<a class="i" href="!g/cds/kokegane-1.jpg" target="_blank"><img src="!g/cds/kokegane-1.jpg" alt="album scan"></a>
+						<a class="i" href="pics/kokegane-1.jpg" target="_blank"><img src="pics/kokegane-1.jpg" alt="album scan"></a>
 
 						<p><span class="date"> 29.may.24</span></p>
 					</div>
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/drippin-theend.jpg">
+			<div class="cd"><img src="pics/drippin-theend.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>villain : the end - drippin</h3>
 						<p><span class="fav"></span></p>
-						<a class="i" href="!g/cds/drippin-theend2.jpg" target="_blank"><img src="!g/cds/drippin-theend2.jpg"></a>
+						<a class="i" href="pics/drippin-theend2.jpg" target="_blank"><img src="pics/drippin-theend2.jpg"></a>
 						<p><span class="ver"> x</span></p>
 						<p><span class="date"> 21.feb.23</span></p>
 					</div>
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/txt-dreamchapter-eternity.jpg">
+			<div class="cd"><img src="pics/txt-dreamchapter-eternity.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>the dream chapter : eternity - tomorrow x together</h3>
 						<p>it would be a perfect EP if it wasn't for 1 (one) song. otherwise, <i>fairy of shampoo</i> is still one of the best tracks in their discography.</p>
-						<a class="i" href="/music/!g/cds/txt-dreamchapter-eternity-booklet2.jpg" target="_blank"><img src="/music/!g/cds/txt-dreamchapter-eternity-booklet2.jpg" style="width: 100%"></a>
+						<a class="i" href="pics/txt-dreamchapter-eternity-booklet2.jpg" target="_blank"><img src="pics/txt-dreamchapter-eternity-booklet2.jpg" style="width: 100%"></a>
 						<p><span class="ver"> starboard</span></p>
 						<p><span class="date"> 01.jun.22</span></p>
 					</div>
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/lucy-childhood.jpg">
+			<div class="cd"><img src="pics/lucy-childhood.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>childhood - lucy</h3>
@@ -283,17 +283,17 @@
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/oohyo-adventure.jpg">
+			<div class="cd"><img src="pics/oohyo-adventure.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>adventure - oohyo</h3>
-						<a class="i" href="/music/!g/cds/oohyo-adventure-booklet.jpg" target="_blank"><img src="/music/!g/cds/oohyo-adventure-booklet.jpg"></a>
+						<a class="i" href="pics/oohyo-adventure-booklet.jpg" target="_blank"><img src="pics/oohyo-adventure-booklet.jpg"></a>
 						<p><span class="date"> 20.aug.21</span></p>
 					</div>
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/loona-&.jpg">
+			<div class="cd"><img src="pics/loona-&.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>&amp; - loona</h3>
@@ -304,7 +304,7 @@
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/ateez-fever-p3.jpg">
+			<div class="cd"><img src="pics/ateez-fever-p3.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>zero : fever part 3 - ateez</h3>
@@ -319,13 +319,13 @@
 		<!-- 			column 4 -->
 		<div class="column">
 
-			<div class="cd"><img src="!g/cds/drippin-villain-book.jpg">
+			<div class="cd"><img src="pics/drippin-villain-book.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>villain - drippin</h3>
 						<p>got this when i was starting to get to know drippin :3 <i>villain</i> is very funky and <i>switch</i> is just a masterpiece.</p>
 						<p>the rest of the EP is a bit forgettable though, so i didn't include it on my favorites</p>
-						<a class="i" href="/music/!g/cds/drippin-villain.jpg" target="_blank"><img src="/music/!g/cds/drippin-villain.jpg"></a>
+						<a class="i" href="pics/drippin-villain.jpg" target="_blank"><img src="pics/drippin-villain.jpg"></a>
 						<p><span class="ver"> a</span></p>
 						<p><span class="date"> 05.apr.22</span></p>
 					</div>
@@ -333,16 +333,16 @@
 			</div>
 
 
-			<div class="cd"><img src="!g/cds/yoasobi-book2.jpg">
+			<div class="cd"><img src="pics/yoasobi-book2.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>the book 2 - yoasobi</h3>
 						<p>christmas gift from my mom! thanks mom.</p>
 						<p>music wise, it's pretty alright! with a exclamation point!</p>
 						<p>i love the art featured in this. it really is like a little storybook. so cute.</p>
-						<a class="i" href="/music/!g/cds/yoasobi-book2-booklet3.jpg" target="_blank"><img src="/music/!g/cds/yoasobi-book2-booklet3.jpg"></a>
-						<a class="i" href="/music/!g/cds/yoasobi-book2-booklet2.jpg" target="_blank"><img src="/music/!g/cds/yoasobi-book2-booklet2.jpg"></a>
-						<a class="i" href="/music/!g/cds/yoasobi-book2-booklet1.jpg" target="_blank"><img src="/music/!g/cds/yoasobi-book2-booklet1.jpg"></a>
+						<a class="i" href="pics/yoasobi-book2-booklet3.jpg" target="_blank"><img src="pics/yoasobi-book2-booklet3.jpg"></a>
+						<a class="i" href="pics/yoasobi-book2-booklet2.jpg" target="_blank"><img src="pics/yoasobi-book2-booklet2.jpg"></a>
+						<a class="i" href="pics/yoasobi-book2-booklet1.jpg" target="_blank"><img src="pics/yoasobi-book2-booklet1.jpg"></a>
 						<p><span class="ver"> limited edition</span></p>
 						<p><span class="date"> 07.dec.21</span></p>
 					</div>
@@ -350,7 +350,7 @@
 			</div>
 
 
-			<div class="cd"><img src="!g/cds/enhypen-dimension-dilemma.jpg">
+			<div class="cd"><img src="pics/enhypen-dimension-dilemma.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>dimension : dilemma - enhypen</h3>
@@ -362,7 +362,7 @@
 			</div>
 
 
-			<div class="cd"><img src="!g/cds/lucy-blue-book.jpg">
+			<div class="cd"><img src="pics/lucy-blue-book.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>blue - lucy</h3>
@@ -373,22 +373,22 @@
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/ateez-fever-p2.jpg">
+			<div class="cd"><img src="pics/ateez-fever-p2.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>zero : fever part 2 - ateez</h3>
 						<p>bought this super cheap from ebay and the only reason why i got this album is because of it's photobook.... i only like 1 song from the album itself <img src="/!g/pix/catbored.gif"> BUT!!!! it contains one of my fav photoshoots. i love the colors a whole lot and the set as well. i think its so creative!</p>
-						<a class="i" href="!g/cds/ateez-fever-p2-book-page1.jpg" target="_blank"><img src="!g/cds/ateez-fever-p2-book-page1.jpg" style="width:100%"></a>
-						<a class="i" href="!g/cds/ateez-fever-p2-book-page2.jpg" target="_blank"><img src="!g/cds/ateez-fever-p2-book-page2.jpg" style="width:100%"></a>
-						<a class="i" href="!g/cds/ateez-fever-p2-book-page3.jpg" target="_blank"><img src="!g/cds/ateez-fever-p2-book-page3.jpg" style="width:100%"></a>
-						<a class="i" href="!g/cds/ateez-fever-p2-book-page4.jpg" target="_blank"><img src="!g/cds/ateez-fever-p2-book-page4.jpg" style="width:100%"></a>
+						<a class="i" href="pics/ateez-fever-p2-book-page1.jpg" target="_blank"><img src="pics/ateez-fever-p2-book-page1.jpg" style="width:100%"></a>
+						<a class="i" href="pics/ateez-fever-p2-book-page2.jpg" target="_blank"><img src="pics/ateez-fever-p2-book-page2.jpg" style="width:100%"></a>
+						<a class="i" href="pics/ateez-fever-p2-book-page3.jpg" target="_blank"><img src="pics/ateez-fever-p2-book-page3.jpg" style="width:100%"></a>
+						<a class="i" href="pics/ateez-fever-p2-book-page4.jpg" target="_blank"><img src="pics/ateez-fever-p2-book-page4.jpg" style="width:100%"></a>
 						<p><span class="ver"> z</span></p>
 						<p><span class="date"> 12.nov.21</span></p>
 					</div>
 				</div>
 			</div>
 
-			<div class="cd"><img src="!g/cds/arcticmonkeys-am.jpg">
+			<div class="cd"><img src="pics/arcticmonkeys-am.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>AM - arctic monkeys</h3>
